# llm-rag-kit

./: README.md  app.py  ds_to_embs.py  embs_to_faiss.py  playground.ipynb  pyproject.toml  wikipedia_passages_c400_jawiki_20230403.jsonl
outputs/embs/multilingual-e5-large-passage/: 0.npz
outputs/faiss_indexes/multilingual-e5-large-passage/: index_IVF256_PQ64.faiss
