[tool.poetry]
name = "llm-rag-kit"
version = "0.1.0"
description = ""
authors = ["S-Tubasa <73173305+S-Tubasa@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "llm_rag_kit"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = { url = "https://download.pytorch.org/whl/cu118/torch-2.0.1%2Bcu118-cp310-cp310-linux_x86_64.whl" }
torchvision = { url = "https://download.pytorch.org/whl/cu118/torchvision-0.15.2%2Bcu118-cp310-cp310-linux_x86_64.whl" }
torchaudio = { url = "https://download.pytorch.org/whl/cu118/torchaudio-2.0.2%2Bcu118-cp310-cp310-linux_x86_64.whl" }
datasets = "^2.15.0"
sentence-transformers = "^2.2.2"
faiss-gpu = "^1.7.2"
hf-hub-ctranslate2 = "^2.12.0"
streamlit = "^1.29.0"
openai = "^1.6.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
